@@ -15,6 +15,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Fix bsddb.db.DBError derived exceptions so they can be unpickled.
+
 Library
 -------
 
